--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "canvacord": "^5.2.3",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
+    "gamedig": "^3.0.7",
+    "minecraft-server-util": "^3.6.0",
     "nodemon": "^2.0.12",
     "rate-limiter-flexible": "^2.2.4",
     "redis": "^3.1.2",
@@ -21,7 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/redis": "^2.8.32",
-    "@types/express-rate-limit": "^5.1.3"
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/redis": "^2.8.32"
   }
 }
