--- a/package.json
+++ b/package.json
@@ -11,19 +11,27 @@
     "start:dev": "nodemon src/api/Server.ts"
   },
   "dependencies": {
+    "@types/node": "^16.9.3",
     "canvacord": "^5.2.3",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "gamedig": "^3.0.7",
     "minecraft-server-util": "^3.6.0",
+    "mongoose": "^6.0.6",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "rate-limiter-flexible": "^2.2.4",
     "redis": "^3.1.2",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "uniqid": "^5.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
-    "@types/redis": "^2.8.32"
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
+    "@types/redis": "^2.8.32",
+    "@types/uniqid": "^5.3.1"
   }
 }
