dynamic html rendering completed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "include": ["./src/api"],
+  "allowJs": true,
   "compilerOptions": {
     "outDir": "./target/",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
-  },
+  }
 }
