--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.0.6",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12",
+    "poker-evaluator-ts": "^2.0.3",
     "rate-limiter-flexible": "^2.2.4",
     "redis": "^3.1.2",
     "ts-node": "^10.2.1",
@@ -31,6 +32,7 @@
     "@types/express-rate-limit": "^5.1.3",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
+    "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
     "@types/uniqid": "^5.3.1"
   }
