--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/node": "^16.9.3",
+    "axios": "^0.22.0",
     "canvacord": "^5.2.3",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
@@ -23,6 +24,7 @@
     "poker-evaluator-ts": "^2.0.3",
     "rate-limiter-flexible": "^2.2.4",
     "redis": "^3.1.2",
+    "translate": "^1.4.0",
     "ts-node": "^10.2.1",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2"
@@ -34,6 +36,7 @@
     "@types/multer": "^1.4.7",
     "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
-    "@types/uniqid": "^5.3.1"
+    "@types/uniqid": "^5.3.1",
+    "@types/axios": "^0.14.0"
   }
 }
