--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "gamedig": "^3.0.7",
+    "jimp": "^0.16.1",
     "minecraft-server-util": "^3.6.0",
     "mongoose": "^6.0.6",
     "multer": "^1.4.3",
@@ -30,6 +31,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
     "@types/mongoose": "^5.11.97",
@@ -37,6 +39,6 @@
     "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
     "@types/uniqid": "^5.3.1",
-    "@types/axios": "^0.14.0"
+    "@types/jimp": "^0.2.28"
   }
 }
