--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.9.3",
     "axios": "^0.22.0",
     "canvacord": "^5.2.3",
+    "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "gamedig": "^3.0.7",
@@ -25,6 +26,7 @@
     "poker-evaluator-ts": "^2.0.3",
     "rate-limiter-flexible": "^2.2.4",
     "redis": "^3.1.2",
+    "scp-scraper": "^0.1.1",
     "translate": "^1.4.0",
     "ts-node": "^10.2.1",
     "uniqid": "^5.4.0",
@@ -34,11 +36,11 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/jimp": "^0.2.28",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
-    "@types/uniqid": "^5.3.1",
-    "@types/jimp": "^0.2.28"
+    "@types/uniqid": "^5.3.1"
   }
 }
