--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/node": "^16.9.3",
+    "@types/uuid": "^8.3.1",
     "axios": "^0.22.0",
     "canvacord": "^5.2.3",
     "cheerio": "^1.0.0-rc.10",
