--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "poker-evaluator-ts": "^2.0.3",
     "rate-limiter-flexible": "^2.2.4",
     "redis": "^3.1.2",
+    "request": "^2.88.2",
     "scp-scraper": "^0.1.1",
     "translate": "^1.4.0",
     "ts-node": "^10.2.1",
@@ -42,6 +43,8 @@
     "@types/multer": "^1.4.7",
     "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
-    "@types/uniqid": "^5.3.1"
+    "@types/uniqid": "^5.3.1",
+    "@types/request": "^2.48.7",
+    "@types/cheerio": "^0.22.30"
   }
 }
