--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "gamedig": "^3.0.7",
+    "hex-colors-info": "^1.0.2",
     "jimp": "^0.16.1",
     "minecraft-server-util": "^3.6.0",
     "mongoose": "^6.0.6",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/cheerio": "^0.22.30",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
     "@types/jimp": "^0.2.28",
@@ -43,8 +45,7 @@
     "@types/multer": "^1.4.7",
     "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
-    "@types/uniqid": "^5.3.1",
     "@types/request": "^2.48.7",
-    "@types/cheerio": "^0.22.30"
+    "@types/uniqid": "^5.3.1"
   }
 }
