--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "crescent-api",
-  "version": "0.5.3",
+  "name": "ponjo-api",
+  "version": "0.6.2",
   "private": true,
-  "description": "The official Crescent API.",
+  "description": "The official Ponjo API.",
   "license": "MIT",
   "author": "Ben Petrillo",
   "main": "src/Server.ts",
@@ -11,8 +11,6 @@
     "start:dev": "nodemon src/Server.ts"
   },
   "dependencies": {
-    "@types/node": "^16.9.3",
-    "@types/uuid": "^8.3.1",
     "axios": "^0.22.0",
     "canvacord": "^5.2.3",
     "cheerio": "^1.0.0-rc.10",
@@ -29,13 +27,12 @@
     "rate-limiter-flexible": "^2.2.4",
     "redis": "^3.1.2",
     "request": "^2.88.2",
-    "scp-scraper": "^0.1.1",
-    "translate": "^1.4.0",
     "ts-node": "^10.2.1",
-    "uniqid": "^5.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/node": "^16.9.3",
+    "@types/uuid": "^8.3.1",
     "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.30",
     "@types/express": "^4.17.13",
@@ -45,7 +42,6 @@
     "@types/multer": "^1.4.7",
     "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
-    "@types/request": "^2.48.7",
-    "@types/uniqid": "^5.3.1"
+    "@types/request": "^2.48.7"
   }
 }
