--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:dev": "nodemon src/Server.ts"
   },
   "dependencies": {
+    "@haileybot/captcha-generator": "^1.7.0",
     "axios": "^0.22.0",
     "canvacord": "^5.2.3",
     "cheerio": "^1.0.0-rc.10",
@@ -31,8 +32,6 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/node": "^16.9.3",
-    "@types/uuid": "^8.3.1",
     "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.30",
     "@types/express": "^4.17.13",
@@ -40,8 +39,10 @@
     "@types/jimp": "^0.2.28",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
+    "@types/node": "^16.9.3",
     "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
-    "@types/request": "^2.48.7"
+    "@types/request": "^2.48.7",
+    "@types/uuid": "^8.3.1"
   }
 }
