--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "redis": "^3.1.2",
     "request": "^2.88.2",
     "ts-node": "^10.2.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "weather-js": "^2.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/chance": "^1.1.3",
     "@types/cheerio": "^0.22.30",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
@@ -45,7 +47,6 @@
     "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
     "@types/request": "^2.48.7",
-    "@types/uuid": "^8.3.1",
-    "@types/chance": "^1.1.3"
+    "@types/uuid": "^8.3.1"
   }
 }
