--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/cheerio": "^0.22.30",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/gamedig": "^3.0.1",
     "@types/jimp": "^0.2.28",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
