api key request tracking

--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "canvas": "^2.8.0",
     "chance": "^1.1.8",
     "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "gamedig": "^3.0.7",
     "hex-colors-info": "^1.0.2",
     "jimp": "^0.16.1",
     "minecraft-server-util": "^3.6.0",
-    "mongoose": "^6.0.6",
+    "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "poker-evaluator-ts": "^2.0.3",
