--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gamedig": "^3.0.7",
     "hex-colors-info": "^1.0.2",
     "jimp": "^0.16.1",
+    "libgif": "^0.0.3",
     "minecraft-server-util": "^3.6.0",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
