--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
+# API SETTINGS
+
+PORT=3000
+
+# DATABASE AUTHENTICATION
+
 PONJOAPI-URI=mongodb+srv://EerieAlchemist:8Qkrt0IpZSO0xguQ@ponjo.xgcp1.mongodb.net/Ponjo-API
 ROBOEERIE-URI=mongodb+srv://EerieAlchemist:8Qkrt0IpZSO0xguQ@ponjo.xgcp1.mongodb.net/RoboEerie
