--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@haileybot/captcha-generator": "^1.7.0",
+    "@types/shortid": "^0.0.29",
+    "awesome-qr": "^2.1.5-rc.0",
     "axios": "^0.22.0",
     "canvacord": "^5.2.3",
     "canvas": "^2.8.0",
     "chance": "^1.1.8",
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "gamedig": "^3.0.7",
@@ -30,7 +33,8 @@
     "poker-evaluator-ts": "^2.0.3",
     "rate-limiter-flexible": "^2.2.4",
     "redis": "^3.1.2",
-    "request": "^2.88.2",
+    "request": "^2.65.0",
+    "shortid": "^2.2.16",
     "ts-node": "^10.2.1",
     "uuid": "^8.3.2",
     "weather-js": "^2.0.0"
