--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "canvas": "^2.8.0",
     "chance": "^1.1.8",
     "cheerio": "^1.0.0-rc.10",
+    "discord-webhook-node": "^1.1.8",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -31,7 +32,7 @@
     "nodemon": "^2.0.12",
     "poker-evaluator-ts": "^2.0.3",
     "rate-limiter-flexible": "^2.2.4",
-    "shortid": "^2.2.16",
+    "shortid": "^2.2.8",
     "ts-node": "^10.2.1",
     "uuid": "^8.3.2",
     "weather-js": "^2.0.0"
