--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "minecraft-server-util": "^3.6.0",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.12",
     "poker-evaluator-ts": "^2.0.3",
     "rate-limiter-flexible": "^2.2.4",
