--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hex-colors-info": "^1.0.2",
     "jimp": "^0.16.1",
     "minecraft-server-util": "^3.6.0",
+    "mongodb": "^4.4.0",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.2",
@@ -48,7 +49,7 @@
     "@types/jimp": "^0.2.28",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.9.3",
+    "@types/node": "^16.11.25",
     "@types/poker-evaluator": "^0.3.3",
     "@types/redis": "^2.8.32",
     "@types/request": "^2.48.7",
